Correctend the pending chages on the Weekly program that invloved row span

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					<!-- WEEKLY PROGRAM ROW-->
 					<div class="row">
 						<div class="col">
-							<table class="table table-sm mt-4">
+							<table class="table table-sm mt-4 border">
 								<thead class="thead-dark">
 									<tr id="">
 										<th scope="col">DAY</th>
@@ -291,8 +291,8 @@
 								<tbody>
 									<tr>
 										<th>Monday</th>
-										<td >19:00-20:00 </td>
-										<td>Bible Study</td>
+										<td >19:00-20:00 <br> 19:00-21:00 </td>
+										<td>Bible Study <br> Creative Ministry</td>
 									</tr>
 									<tr>
 										<th>Tuesday</th>
@@ -316,13 +316,13 @@
 									</tr>
 									<tr>
 										<th>Saturday</th>
-										<td>12:00-14:00</td>
-										<td>Instrument Practise</td>
+										<td>12:00-14:00 <br> 14:00-16:00</td>
+										<td>Instrument Practise <br>Praise & Worship Practice</td>
 									</tr>
 									<tr>
 										<th>Sunday</th>
-										<td>07:00-09:00</td>
-										<td>Fisrt Service</td>
+										<td>07:00-09:00 <br>09:30-11:30 <br>19:00-20:00 </td>
+										<td>Fisrt Service <br>Second Service <br>Itercessory</td>
 									</tr>
 								</tbody>
 
