Changed The Slider Images

--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
 					<!--Images-->
 					<div id="carausel" class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="images/slider/IMG_5386.JPG" class="d-block w-100 " alt="pic 1">
+							<img src="images/slider/arthur-miranda-rShWIdhcYOw-unsplash.jpg" class="d-block w-100 " alt="pic 1">
 						</div>
 						<div class="carousel-item">
-							<img src="images/slider/IMG_5392.JPG" class="d-block w-100 " alt="pic 1">
+							<img src="images/slider/ben-white-TlBF3ZUVTvE-unsplash.jpg" class="d-block w-100 " alt="pic 1">
 						</div>
 						<div class="carousel-item">
-							<img src="images/slider/IMG_5395.JPG" class="d-block w-100 " alt="pic 1">
+							<img src="images/slider/benjamin-davies-FiZTaNTj2Ak-unsplash.jpg" class="d-block w-100 " alt="pic 1">
 						</div>
 						<div class="carousel-item">
-							<img src="images/slider/IMG_5386.JPG" class="d-block w-100" alt="pic 1">
+							<img src="images/slider/debby-ledet-4rM23tALoMg-unsplash.jpg" class="d-block w-100" alt="pic 1">
 						</div>
 					</div>
 					<!--End of Images-->
