Updated Animation Status of the Weekly Program Section and the  upcoming events

--- a/index.html
+++ b/index.html
@@ -167,16 +167,16 @@
 					<!--Images-->
 					<div id="carausel" class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="images/slider/1.jpeg" class="d-block w-100 " alt="pic 1">
+							<img src="images/slider/1.jpeg" class=" w-100 slide-img" alt="pic 1">
 						</div>
 						<div class="carousel-item">
-							<img src="images/slider/2.jpeg" class="d-block w-100 " alt="pic 1">
+							<img src="images/slider/2.jpeg" class=" w-100 slide-img" alt="pic 1">
 						</div>
 						<div class="carousel-item">
-							<img src="images/slider/3.jpeg" class="d-block w-100 " alt="pic 1">
+							<img src="images/slider/3.jpeg" class="  w-100 slide-img " alt="pic 1">
 						</div>
 						<div class="carousel-item">
-							<img src="images/slider/4.jpeg" class="d-block w-100" alt="pic 1">
+							<img src="images/slider/4.jpeg" class=" w-100 slide-img" alt="pic 1">
 						</div>
 					</div>
 					<!--End of Images-->
@@ -205,7 +205,7 @@
 
 				<div id="main-col" class="col-md-9 bg-light rounded ">
 					<!-- UPCOMING EVENTS PICTURE ROW-->
-					<div class="row w-50 mx-auto">
+					<div class="row w-50 mx-auto wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
 						<img src="images/upcomingevents2.png" alt="" class="img-fluid px-3" srcset="">
 					</div>
 					<!-- UPCOMING EVENTS ROW-->
@@ -231,7 +231,7 @@
 					<!-- ABOUT,MISSION,VISION ROW-->
 					<div class="row text-center my-4">
 						<!-- //THE ABOUT BLOCK -->
-						<div class=" col-sm-4 wow fadeInLeft">
+						<div class=" col-sm-4 wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">
 							<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
 								style="background-color:transparent;">
 								<div class="card-header tGB pBG about p-1 ">
@@ -246,7 +246,7 @@
 							</div>
 						</div>
 						<!-- //THE ABOUT BLOCK -->
-						<div class="col-sm-4 wow fadeInDown">
+						<div class="col-sm-4 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
 							<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
 								style="background-color:transparent;">
 								<div class="card-header tGB pBG about p-1">
@@ -261,7 +261,7 @@
 						</div>
 						<!-- //THE ABOUT BLOCK -->
 
-						<div class="col-sm-4 wow fadeInRight">
+						<div class="col-sm-4 wow fadeInRight" data-wow-duration=".8s" data-wow-delay=".2s">
 							<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
 								style="background-color:transparent;">
 								<div class="card-header tGB pBG about p-1">
@@ -278,7 +278,7 @@
 					</div>
 					<!-- WEEKLY PROGRAM ROW-->
 					<div class="row">
-						<div class="col">
+						<div class="col wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s" >
 							<table class="table table-sm mt-4 border">
 								<thead class="thead-dark">
 									<tr id="">
