--- a/index.html
+++ b/index.html
@@ -199,238 +199,295 @@
 
 	<main>
 		<!--  Main Section -->
-		<div class="container my-4 ">
-			<!-- Upcoming Events-->
-			<div class="row">
+		<section>
+			<div class="container my-4 ">
+				<!-- Upcoming Events-->
+				<div class="row">
 
-				<div id="main-col" class="col-md-9 bg-light rounded ">
-					<!-- UPCOMING EVENTS PICTURE ROW-->
-					<div class="row w-50 mx-auto wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-						<img src="images/upcomingevents2.png" alt="" class="img-fluid px-3" srcset="">
-					</div>
-					<!-- UPCOMING EVENTS ROW-->
-					<div id="upcoming" class="d-flex justify-content-center ">
-						<div class="col-auto col-md-3 ">
-							<img src="images/uploads/2.jpeg" class="img-fluid" alt="">
+					<div id="main-col" class="col-md-9 bg-light rounded ">
+						<!-- UPCOMING EVENTS PICTURE ROW-->
+						<div class="row w-50 mx-auto wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+							<img src="images/upcomingevents2.png" alt="" class="img-fluid px-3" srcset="">
 						</div>
-						<div class="col-auto col-md-3 ">
-							<img src="images/uploads/1.jpeg" class="img-fluid" alt="">
-						</div>
-						<div class="col-auto col-md-3 ">
-							<img src="images/uploads/3.jpeg" class="img-fluid" alt="">
-						</div>
-						<div class="col-auto col-md-3 ">
-							<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
-						</div>
-						<div class="col-auto col-md-3 ">
-							<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
-						</div>
+						<!-- UPCOMING EVENTS ROW-->
+						<div id="upcoming" class="d-flex justify-content-center ">
+							<div class="col-auto col-md-3 ">
+								<img src="images/uploads/2.jpeg" class="img-fluid" alt="">
+							</div>
+							<div class="col-auto col-md-3 ">
+								<img src="images/uploads/1.jpeg" class="img-fluid" alt="">
+							</div>
+							<div class="col-auto col-md-3 ">
+								<img src="images/uploads/3.jpeg" class="img-fluid" alt="">
+							</div>
+							<div class="col-auto col-md-3 ">
+								<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
+							</div>
+							<div class="col-auto col-md-3 ">
+								<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
+							</div>
 
 
-					</div>
-					<!-- ABOUT,MISSION,VISION ROW-->
-					<div class="row text-center my-4">
-						<!-- //THE ABOUT BLOCK -->
-						<div class=" col-sm-4 wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">
-							<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
-								style="background-color:transparent;">
-								<div class="card-header tGB pBG about p-1 ">
-									-VISION-
+						</div>
+						<!-- ABOUT,MISSION,VISION ROW-->
+						<div class="row text-center my-4">
+							<!-- //THE ABOUT BLOCK -->
+							<div class=" col-sm-4 wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">
+								<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
+									style="background-color:transparent;">
+									<div class="card-header tGB pBG about p-1 ">
+										-VISION-
+									</div>
+									<div class="card-body">
+										To be the source of true light shinning in the campus and to the entire globe
+										for
+										God's
+										Grlory.
+									</div>
+
 								</div>
-								<div class="card-body">
-									To be the source of true light shinning in the campus and to the entire globe for
-									God's
-									Grlory.
+							</div>
+							<!-- //THE ABOUT BLOCK -->
+							<div class="col-sm-4 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+								<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
+									style="background-color:transparent;">
+									<div class="card-header tGB pBG about p-1">
+										-MISSION-
+									</div>
+									<div class="card-body">
+										To be the source of true light shinning in the campus and to the entire globe
+										for
+										God's
+										Grlory.
+									</div>
 								</div>
+							</div>
+							<!-- //THE ABOUT BLOCK -->
+
+							<div class="col-sm-4 wow fadeInRight" data-wow-duration=".8s" data-wow-delay=".2s">
+								<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
+									style="background-color:transparent;">
+									<div class="card-header tGB pBG about p-1">
+										-MOTTO-
+									</div>
+									<div class="card-body">
+										To be the source of true light shinning in the campus and to the entire globe
+										for
+										God's
+										Grlory.
+									</div>
+								</div>
+							</div>
+
+						</div>
+						<!-- WEEKLY PROGRAM ROW-->
+						<div class="row">
+							<div class="col wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+								<table class="table table-sm mt-4 border">
+									<thead class="thead-dark">
+										<tr id="">
+											<th scope="col">DAY</th>
+											<th scope="col">TIME</th>
+											<th scope="col">EVENT</th>
+
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<th>Monday</th>
+											<td>19:00-20:00 <br> 19:00-21:00 </td>
+											<td>Bible Study <br> Creative Ministry</td>
+										</tr>
+										<tr>
+											<th>Tuesday</th>
+											<td>19:00-20:00</td>
+											<td>Evangelism</td>
+										</tr>
+										<tr>
+											<th>Wednesday</th>
+											<td>19:00-20:00</td>
+											<td>Discipleship</td>
+										</tr>
+										<tr>
+											<th>Thursaday</th>
+											<td>19:00-20:00</td>
+											<td>Choir</td>
+										</tr>
+										<tr>
+											<th>Friday</th>
+											<td>19:00-20:30</td>
+											<td> Friday Night Service</td>
+										</tr>
+										<tr>
+											<th>Saturday</th>
+											<td>12:00-14:00 <br> 14:00-16:00</td>
+											<td>Instrument Practise <br>Praise & Worship Practice</td>
+										</tr>
+										<tr>
+											<th>Sunday</th>
+											<td>07:00-09:00 <br>09:30-11:30 <br>19:00-20:00 </td>
+											<td>Fisrt Service <br>Second Service <br>Itercessory</td>
+										</tr>
+									</tbody>
+
+								</table>
+							</div>
+						</div>
+					</div>
+
+					<!-- Resent Article Section -->
+					<div id="article" class="col-md-3  ">
+						<div class="blo-top1 bg-light rounded px-2">
+
+							<div class="tech-btm">
+								<div class="search-1 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<form action="#" method="post">
+										<input type="search" name="Search" value="Search" onfocus="this.value = '';"
+											onblur="if (this.value == '') {this.value = 'Search';}" required="">
+										<input type="submit" value=" ">
+									</form>
+								</div>
+								<h4>Resent Posts </h4>
+								<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="blog-grid-left">
+										<a href="singlepage.html"><img src="images/t2.jpg" class="img-responsive"
+												alt=""></a>
+									</div>
+									<div class="blog-grid-right">
+
+										<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+								<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="blog-grid-left">
+										<a href="singlepage.html"><img src="images/m2.jpg" class="img-responsive"
+												alt=""></a>
+									</div>
+									<div class="blog-grid-right">
+
+										<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+								<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="blog-grid-left">
+										<a href="singlepage.html"><img src="images/f2.jpg" class="img-responsive"
+												alt=""></a>
+									</div>
+									<div class="blog-grid-right">
+
+										<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+								<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="blog-grid-left">
+										<a href="singlepage.html"><img src="images/t3.jpg" class="img-responsive"
+												alt=""></a>
+									</div>
+									<div class="blog-grid-right">
+
+										<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+								<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="blog-grid-left">
+										<a href="singlepage.html"><img src="images/m3.jpg" class="img-responsive"
+												alt=""></a>
+									</div>
+									<div class="blog-grid-right">
+
+										<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
+									</div>
+									<div class="clearfix"> </div>
+								</div>
+								<div class="insta wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+
+
+									<p>Lorem ipsum ex vix illud nonummy, novum tation et his. At vix scripta patrioque
+										scribentur, at pro</p>
+									<div class="twt">
+
+										<iframe id="twitter-widget-0" scrolling="no" frameborder="0"
+											allowtransparency="true"
+											class="twitter-hashtag-button twitter-hashtag-button-rendered twitter-tweet-button"
+											title="Twitter Tweet Button"
+											src="https://platform.twitter.com/widgets/tweet_button.b7de008f493a5185d8df1aedd62d77c6.en.html#button_hashtag=TwitterStories&amp;dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=https%3A%2F%2Fp.w3layouts.com%2Fdemos%2Fduplex%2Fweb%2F&amp;size=l&amp;time=1467721486626&amp;type=hashtag"
+											style="position: static; visibility: visible; width: 166px; height: 28px;"
+											data-hashtag="TwitterStories"></iframe>
+										<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+									</div>
+								</div>
+
+
 
 							</div>
 						</div>
-						<!-- //THE ABOUT BLOCK -->
-						<div class="col-sm-4 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-							<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
-								style="background-color:transparent;">
-								<div class="card-header tGB pBG about p-1">
-									-MISSION-
-								</div>
-								<div class="card-body">
-									To be the source of true light shinning in the campus and to the entire globe for
-									God's
-									Grlory.
-								</div>
-							</div>
-						</div>
-						<!-- //THE ABOUT BLOCK -->
-
-						<div class="col-sm-4 wow fadeInRight" data-wow-duration=".8s" data-wow-delay=".2s">
-							<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
-								style="background-color:transparent;">
-								<div class="card-header tGB pBG about p-1">
-									-MOTTO-
-								</div>
-								<div class="card-body">
-									To be the source of true light shinning in the campus and to the entire globe for
-									God's
-									Grlory.
-								</div>
-							</div>
-						</div>
-
 					</div>
-					<!-- WEEKLY PROGRAM ROW-->
-					<div class="row">
-						<div class="col wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s" >
-							<table class="table table-sm mt-4 border">
-								<thead class="thead-dark">
-									<tr id="">
-										<th scope="col">DAY</th>
-										<th scope="col">TIME</th>
-										<th scope="col">EVENT</th>
-
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<th>Monday</th>
-										<td >19:00-20:00 <br> 19:00-21:00 </td>
-										<td>Bible Study <br> Creative Ministry</td>
-									</tr>
-									<tr>
-										<th>Tuesday</th>
-										<td>19:00-20:00</td>
-										<td>Evangelism</td>
-									</tr>
-									<tr>
-										<th>Wednesday</th>
-										<td>19:00-20:00</td>
-										<td>Discipleship</td>
-									</tr>
-									<tr>
-										<th>Thursaday</th>
-										<td>19:00-20:00</td>
-										<td>Choir</td>
-									</tr>
-									<tr>
-										<th>Friday</th>
-										<td>19:00-20:30</td>
-										<td> Friday Night Service</td>
-									</tr>
-									<tr>
-										<th>Saturday</th>
-										<td>12:00-14:00 <br> 14:00-16:00</td>
-										<td>Instrument Practise <br>Praise & Worship Practice</td>
-									</tr>
-									<tr>
-										<th>Sunday</th>
-										<td>07:00-09:00 <br>09:30-11:30 <br>19:00-20:00 </td>
-										<td>Fisrt Service <br>Second Service <br>Itercessory</td>
-									</tr>
-								</tbody>
-
-							</table>
-						</div>
-					</div>
-
-
-
 
 				</div>
+			</div>
+		</section>
 
-				<!-- Resent Article Section -->
-				<div id="article" class="col-md-3  ">
-					<div class="blo-top1 bg-light rounded px-2">
+		<!-- Quote Secttion-->
+		<section>
+			<div id="quote" class="row">
+				<div class="container">
+					<div class="row py-4 " style="height: 50vh;">
+						<div class="col my-auto">
+							<h1 class="text-center display-4"
+								style="color:#33C722;; font-family: 'Marck Script', cursive;">
+								<i class="fas fa-quote-left fa-1x text-primary mb-3"></i>
+								Serving God With Fervent Worship
+								<i class="fas fa-quote-right fa-1x text-primary mb-3"></i>
+							</h1>
 
-						<div class="tech-btm">
-							<div class="search-1 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<form action="#" method="post">
-									<input type="search" name="Search" value="Search" onfocus="this.value = '';"
-										onblur="if (this.value == '') {this.value = 'Search';}" required="">
-									<input type="submit" value=" ">
-								</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Ministries Section -->
+		<section>
+			<div class="container tGB">
+				<div class="row bg-color">
+					<div class="col-lg-4 mt-1">
+						<div class="immageBox">
+							<img src="images/t1.jpg" alt="" width="1600" class="img-fluid">
+							<div class="textBox pt-5">
+								<p class="text-center bg-color"><em><strong>ZIPPORAH THUO<br>
+											Praise &amp; Worship Director</strong></em></p>
+								<h1 class="text-center"><strong>PRAISE AND WORSHIP</strong></h1>
 							</div>
-							<h4>Resent Posts </h4>
-							<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="blog-grid-left">
-									<a href="singlepage.html"><img src="images/t2.jpg" class="img-responsive"
-											alt=""></a>
-								</div>
-								<div class="blog-grid-right">
-
-									<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
-								</div>
-								<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="col-lg-4 mt-1" >
+						<div class="immageBox">
+							<img src="images/t1.jpg" alt="" width="1600" class="img-fluid ">
+							<div class="textBox pt-5">
+								<p class="text-center"><strong>PAUL MUNGATHIA<br>
+										bible study co-ordinator</strong></p>
+								<h1 class="text-center inline-block align-bottom"><strong>BIBLE STUDY</strong></h1>
 							</div>
-							<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="blog-grid-left">
-									<a href="singlepage.html"><img src="images/m2.jpg" class="img-responsive"
-											alt=""></a>
-								</div>
-								<div class="blog-grid-right">
-
-									<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
-								</div>
-								<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="col-lg-4 mt-1" >
+						<div class="immageBox">
+							<img src="images/t1.jpg" alt="" width="1600" class="img-fluid">
+							<div class="textBox pt-5">
+								<p class="text-center"><em><strong>AUSTIN MATUNGA<br>
+											Music co-ordinator</strong></em></p>
+								<h1 class="text-center"><strong>MUSIC</strong></h1>
 							</div>
-							<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="blog-grid-left">
-									<a href="singlepage.html"><img src="images/f2.jpg" class="img-responsive"
-											alt=""></a>
-								</div>
-								<div class="blog-grid-right">
-
-									<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="blog-grid-left">
-									<a href="singlepage.html"><img src="images/t3.jpg" class="img-responsive"
-											alt=""></a>
-								</div>
-								<div class="blog-grid-right">
-
-									<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="blog-grids wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="blog-grid-left">
-									<a href="singlepage.html"><img src="images/m3.jpg" class="img-responsive"
-											alt=""></a>
-								</div>
-								<div class="blog-grid-right">
-
-									<h5><a href="singlepage.html">Pellentesque dui Maecenas male</a> </h5>
-								</div>
-								<div class="clearfix"> </div>
-							</div>
-							<div class="insta wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-
-
-								<p>Lorem ipsum ex vix illud nonummy, novum tation et his. At vix scripta patrioque
-									scribentur, at pro</p>
-								<div class="twt">
-
-									<iframe id="twitter-widget-0" scrolling="no" frameborder="0"
-										allowtransparency="true"
-										class="twitter-hashtag-button twitter-hashtag-button-rendered twitter-tweet-button"
-										title="Twitter Tweet Button"
-										src="https://platform.twitter.com/widgets/tweet_button.b7de008f493a5185d8df1aedd62d77c6.en.html#button_hashtag=TwitterStories&amp;dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=https%3A%2F%2Fp.w3layouts.com%2Fdemos%2Fduplex%2Fweb%2F&amp;size=l&amp;time=1467721486626&amp;type=hashtag"
-										style="position: static; visibility: visible; width: 166px; height: 28px;"
-										data-hashtag="TwitterStories"></iframe>
-									<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
-								</div>
-							</div>
-
-
-
 						</div>
 					</div>
 				</div>
 
 			</div>
-			<div class="row">
-				this is the next ministries section
-			</div>
+		</section>
 	</main>
 
 	<footer>
