--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 			<ul class="navbar-nav " style="background-color: #500d62;">
 				<li class="nav-item">
 					<a class="nav-link" href="../index.html">HOME</a>
+		
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link" data-toggle="dropdown" data-target="dropdown_target" href="#">
@@ -406,19 +407,7 @@
 								<div class="insta wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
 
 
-									<p>Lorem ipsum ex vix illud nonummy, novum tation et his. At vix scripta patrioque
-										scribentur, at pro</p>
-									<div class="twt">
-
-										<iframe id="twitter-widget-0" scrolling="no" frameborder="0"
-											allowtransparency="true"
-											class="twitter-hashtag-button twitter-hashtag-button-rendered twitter-tweet-button"
-											title="Twitter Tweet Button"
-											src="https://platform.twitter.com/widgets/tweet_button.b7de008f493a5185d8df1aedd62d77c6.en.html#button_hashtag=TwitterStories&amp;dnt=false&amp;id=twitter-widget-0&amp;lang=en&amp;original_referer=https%3A%2F%2Fp.w3layouts.com%2Fdemos%2Fduplex%2Fweb%2F&amp;size=l&amp;time=1467721486626&amp;type=hashtag"
-											style="position: static; visibility: visible; width: 166px; height: 28px;"
-											data-hashtag="TwitterStories"></iframe>
-										<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
-									</div>
+									This is the twitter section
 								</div>
 
 
@@ -452,8 +441,11 @@
 
 		<!-- Ministries Section -->
 		<section>
-			<div class="container tGB">
-				<div class="row bg-color">
+			<div class="container ">
+				<div class="row">
+					<h1 class="mx-auto">Our Ministries</h1>
+				</div>
+				<div class="row bg-color tGB">
 					<div class="col-lg-4 mt-1">
 						<div class="immageBox">
 							<img src="images/t1.jpg" alt="" width="1600" class="img-fluid">
@@ -467,10 +459,10 @@
 					<div class="col-lg-4 mt-1" >
 						<div class="immageBox">
 							<img src="images/t1.jpg" alt="" width="1600" class="img-fluid ">
-							<div class="textBox pt-5">
-								<p class="text-center"><strong>PAUL MUNGATHIA<br>
+							<div class="textBox pt-5 ">
+								<p class="text-center "><strong>PAUL MUNGATHIA<br>
 										bible study co-ordinator</strong></p>
-								<h1 class="text-center inline-block align-bottom"><strong>BIBLE STUDY</strong></h1>
+								<h1 class="text-center "><strong>BIBLE STUDY</strong></h1>
 							</div>
 						</div>
 					</div>
