Modified Comments On The Bog Page

--- a/index.html
+++ b/index.html
@@ -211,135 +211,141 @@
 				<!-- Upcoming Events-->
 				<div class="row">
 
-					<div id="main-col" class="col-md-9 bg-light rounded ">
-						<!-- UPCOMING EVENTS PICTURE ROW-->
-						<div class="row w-50 mx-auto wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-							<img src="images/upcomingevents2.png" alt="" class="img-fluid px-3" srcset="">
-						</div>
-						<!-- UPCOMING EVENTS ROW-->
-						<div id="upcoming" class="d-flex justify-content-center ">
-							<div class="col-auto col-md-3 ">
-								<img src="images/uploads/2.jpeg" class="img-fluid" alt="">
+					<div id="main-col" class="col-md-9 rounded ">
+						<div class="bg-light px-2">
+							<!-- UPCOMING EVENTS PICTURE ROW-->
+							<div class="row w-50 mx-auto wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+								<img src="images/upcomingevents2.png" alt="" class="img-fluid px-3" srcset="">
 							</div>
-							<div class="col-auto col-md-3 ">
-								<img src="images/uploads/1.jpeg" class="img-fluid" alt="">
-							</div>
-							<div class="col-auto col-md-3 ">
-								<img src="images/uploads/3.jpeg" class="img-fluid" alt="">
-							</div>
-							<div class="col-auto col-md-3 ">
-								<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
-							</div>
-							<div class="col-auto col-md-3 ">
-								<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
-							</div>
-
-
-						</div>
-						<!-- ABOUT,MISSION,VISION ROW-->
-						<div class="row text-center my-4">
-							<!-- //THE ABOUT BLOCK -->
-							<div class=" col-sm-4 wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
-									style="background-color:transparent;">
-									<div class="card-header tGB pBG about p-1 ">
-										-VISION-
-									</div>
-									<div class="card-body">
-										To be the source of true light shinning in the campus and to the entire globe
-										for
-										God's
-										Grlory.
-									</div>
-
+							<!-- UPCOMING EVENTS ROW-->
+							<div id="upcoming" class="d-flex justify-content-center ">
+								<div class="col-auto col-md-3 ">
+									<img src="images/uploads/2.jpeg" class="img-fluid" alt="">
 								</div>
+								<div class="col-auto col-md-3 ">
+									<img src="images/uploads/1.jpeg" class="img-fluid" alt="">
+								</div>
+								<div class="col-auto col-md-3 ">
+									<img src="images/uploads/3.jpeg" class="img-fluid" alt="">
+								</div>
+								<div class="col-auto col-md-3 ">
+									<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
+								</div>
+								<div class="col-auto col-md-3 ">
+									<img src="images/uploads/4.jpeg" class="img-fluid" alt="">
+								</div>
+
+
 							</div>
-							<!-- //THE ABOUT BLOCK -->
-							<div class="col-sm-4 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
-									style="background-color:transparent;">
-									<div class="card-header tGB pBG about p-1">
-										-MISSION-
-									</div>
-									<div class="card-body">
-										To be the source of true light shinning in the campus and to the entire globe
-										for
-										God's
-										Grlory.
+							<!-- ABOUT,MISSION,VISION ROW-->
+							<div class="row text-center my-4">
+								<!-- //THE ABOUT BLOCK -->
+								<div class=" col-sm-4 wow fadeInLeft" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
+										style="background-color:transparent;">
+										<div class="card-header tGB pBG about p-1 ">
+											-VISION-
+										</div>
+										<div class="card-body">
+											To be the source of true light shinning in the campus and to the entire
+											globe
+											for
+											God's
+											Grlory.
+										</div>
+
 									</div>
 								</div>
-							</div>
-							<!-- //THE ABOUT BLOCK -->
-
-							<div class="col-sm-4 wow fadeInRight" data-wow-duration=".8s" data-wow-delay=".2s">
-								<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
-									style="background-color:transparent;">
-									<div class="card-header tGB pBG about p-1">
-										-MOTTO-
-									</div>
-									<div class="card-body">
-										To be the source of true light shinning in the campus and to the entire globe
-										for
-										God's
-										Grlory.
+								<!-- //THE ABOUT BLOCK -->
+								<div class="col-sm-4 wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
+										style="background-color:transparent;">
+										<div class="card-header tGB pBG about p-1">
+											-MISSION-
+										</div>
+										<div class="card-body">
+											To be the source of true light shinning in the campus and to the entire
+											globe
+											for
+											God's
+											Grlory.
+										</div>
 									</div>
 								</div>
+								<!-- //THE ABOUT BLOCK -->
+
+								<div class="col-sm-4 wow fadeInRight" data-wow-duration=".8s" data-wow-delay=".2s">
+									<div class="card transparentGB about border-left-0 border-right-0 border-top-0 "
+										style="background-color:transparent;">
+										<div class="card-header tGB pBG about p-1">
+											-MOTTO-
+										</div>
+										<div class="card-body">
+											To be the source of true light shinning in the campus and to the entire
+											globe
+											for
+											God's
+											Grlory.
+										</div>
+									</div>
+								</div>
+
 							</div>
+							<!-- WEEKLY PROGRAM ROW-->
+							<div class="row">
+								<div class="col wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
+									<table class="table table-sm mt-4 border">
+										<thead class="thead-dark">
+											<tr id="">
+												<th scope="col">DAY</th>
+												<th scope="col">TIME</th>
+												<th scope="col">EVENT</th>
 
-						</div>
-						<!-- WEEKLY PROGRAM ROW-->
-						<div class="row">
-							<div class="col wow fadeInDown" data-wow-duration=".8s" data-wow-delay=".2s">
-								<table class="table table-sm mt-4 border">
-									<thead class="thead-dark">
-										<tr id="">
-											<th scope="col">DAY</th>
-											<th scope="col">TIME</th>
-											<th scope="col">EVENT</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr>
+												<th>Monday</th>
+												<td>19:00-20:00 <br> 19:00-21:00 </td>
+												<td>Bible Study <br> Creative Ministry</td>
+											</tr>
+											<tr>
+												<th>Tuesday</th>
+												<td>19:00-20:00</td>
+												<td>Evangelism</td>
+											</tr>
+											<tr>
+												<th>Wednesday</th>
+												<td>19:00-20:00</td>
+												<td>Discipleship</td>
+											</tr>
+											<tr>
+												<th>Thursaday</th>
+												<td>19:00-20:00</td>
+												<td>Choir</td>
+											</tr>
+											<tr>
+												<th>Friday</th>
+												<td>19:00-20:30</td>
+												<td> Friday Night Service</td>
+											</tr>
+											<tr>
+												<th>Saturday</th>
+												<td>12:00-14:00 <br> 14:00-16:00</td>
+												<td>Instrument Practise <br>Praise & Worship Practice</td>
+											</tr>
+											<tr>
+												<th>Sunday</th>
+												<td>07:00-09:00 <br>09:30-11:30 <br>19:00-20:00 </td>
+												<td>Fisrt Service <br>Second Service <br>Itercessory</td>
+											</tr>
+										</tbody>
 
-										</tr>
-									</thead>
-									<tbody>
-										<tr>
-											<th>Monday</th>
-											<td>19:00-20:00 <br> 19:00-21:00 </td>
-											<td>Bible Study <br> Creative Ministry</td>
-										</tr>
-										<tr>
-											<th>Tuesday</th>
-											<td>19:00-20:00</td>
-											<td>Evangelism</td>
-										</tr>
-										<tr>
-											<th>Wednesday</th>
-											<td>19:00-20:00</td>
-											<td>Discipleship</td>
-										</tr>
-										<tr>
-											<th>Thursaday</th>
-											<td>19:00-20:00</td>
-											<td>Choir</td>
-										</tr>
-										<tr>
-											<th>Friday</th>
-											<td>19:00-20:30</td>
-											<td> Friday Night Service</td>
-										</tr>
-										<tr>
-											<th>Saturday</th>
-											<td>12:00-14:00 <br> 14:00-16:00</td>
-											<td>Instrument Practise <br>Praise & Worship Practice</td>
-										</tr>
-										<tr>
-											<th>Sunday</th>
-											<td>07:00-09:00 <br>09:30-11:30 <br>19:00-20:00 </td>
-											<td>Fisrt Service <br>Second Service <br>Itercessory</td>
-										</tr>
-									</tbody>
-
-								</table>
+									</table>
+								</div>
 							</div>
 						</div>
+
 					</div>
 
 					<!-- Resent Article Section -->
