Database first commit And Modification of the Blog Page

--- a/blog.html
+++ b/blog.html
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
 
                             <h3><a href="singlepage.html">Lorem Ipsum is simply</a></h3>
-                            <h6 class="text-capitalize">By daniel Washira 06/06/2019.</h6>
+                            <h6 class="text-capitalize font-weight-bold">By daniel Washira 06/06/2019.</h6>
                             <!-- Like Buttons And Comments -->
                             <div class="d-flex">
                                 <div class="mx-3"><span> <i class="far fa-comment-alt"></i> </span> 4</div>
@@ -214,7 +214,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                             <p>Ut enim ad minim veniam, quis nostrud eiusmod tempor incididunt ut labore et dolore magna
                                 aliqua exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <h6 class="text-capitalize text-right">By daniel Washira 06/06/2019.</h6>
+                            <h6 class="text-capitalize text-right font-weight-bold">By daniel Washira 06/06/2019.</h6>
                             <!-- View More Share -->
                             <div class="d-flex justify-content-between">
                                 <div class="d-inline">
@@ -228,7 +228,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </div>
                             </div>
                             <!-- Comment -->
-                            <div >
+                            <div>
                                 <div class="d-flex justify-content-center">
                                     <input type="text" class="d-inline form-control w-75 article-input" name="" id=""
                                         placeholder="Add a Comment ... ">
@@ -455,10 +455,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
         </div>
-        <div class="row" id="last-row">
-            <div class="col-xl-12">
-                <p id="last-row-para" class="text-center"> &copy; Kirinyaga University Christian Union 2018</p>
-            </div>
+        <div class="container-fluid" id="last-row">
+
+            <p id="last-row-para" class="text-center mx-auto"> &copy; Kirinyaga University Christian Union 2018</p>
+        </div>
     </footer>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/popper.min.js"></script>
