--- a/index.html
+++ b/index.html
@@ -793,10 +793,10 @@
 			</div>
 		</div>
 		</div>
-		<div class="row" id="last-row">
-			<div class="col-xl-12">
-				<p id="last-row-para" class="text-center"> &copy; Kirinyaga University Christian Union 2018</p>
-			</div>
+		<div class="container-fluid" id="last-row">
+
+			<p id="last-row-para" class="text-center mx-auto"> &copy; Kirinyaga University Christian Union 2018</p>
+		</div>
 	</footer>
 	<a href="#" class="back-to-top"><i class="fas fa-arrow-circle-up fx-7"></i></a>
 
