Added Article Category and announcemet table

--- a/admin/index.html
+++ b/admin/index.html
@@ -82,6 +82,7 @@
         </ul>
     </nav>
     <main class="wrapper">
+        <!-- Right side navigation -->
         <aside id="sidebar" class="">
 
             <ul class="list-unstyled components">
@@ -148,6 +149,21 @@
                     <a href="#"><i class="far fa-calendar-alt"></i> EVENTS</a>
                 </li>
                 <li>
+                    <a href="#leaders" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <span><i class="fas fa-crown"></i></span> LEADERS</a>
+                    <ul class="collapse list-unstyled" id="leaders">
+                        <li>
+                            <a href="#">- Church Leader</a>
+                        </li>
+                        <li>
+                            <a href="#">- Add Positions</a>
+                        </li>
+
+                    </ul>
+                </li>
+
+
+                <li>
                     <a href="#"> <span><i class="fas fa-user-shield"></i></span> ADMIN</a>
                 </li>
             </ul>
@@ -168,26 +184,26 @@
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4 mt-2">
-                        <div class="card greenBgMid  text-light p-3">
-                                <div class="d-flex">
-                                    <div class="d-inline "> <i class="fas fa-newspaper fa-5x"></i></div>
-                                    <div class="flex-grow-1 ">
-                                        <h5 class="text-center">Total Posts</h5>
-                                        <h1 class="text-center">120</h1>
-                                    </div>
-                                </div>
+                    <div class="card greenBgMid  text-light p-3">
+                        <div class="d-flex">
+                            <div class="d-inline "> <i class="fas fa-newspaper fa-5x"></i></div>
+                            <div class="flex-grow-1 ">
+                                <h5 class="text-center">Total Posts</h5>
+                                <h1 class="text-center">120</h1>
                             </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-6 col-md-4 mt-2">
-                        <div class="card greenBgMid  text-light p-3">
-                                <div class="d-flex">
-                                    <div class="d-inline "> <i class="fas fa-users fa-5x"></i></i></div>
-                                    <div class="flex-grow-1 ">
-                                        <h5 class="text-center">Total Members</h5>
-                                        <h1 class="text-center">2,000</h1>
-                                    </div>
-                                </div>
+                    <div class="card greenBgMid  text-light p-3">
+                        <div class="d-flex">
+                            <div class="d-inline "> <i class="fas fa-users fa-5x"></i></i></div>
+                            <div class="flex-grow-1 ">
+                                <h5 class="text-center">Total Members</h5>
+                                <h1 class="text-center">2,000</h1>
                             </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
