--- a/admin/index.html
+++ b/admin/index.html
@@ -100,6 +100,9 @@
                         <li>
                             <a href="#">- Verified</a>
                         </li>
+                        <li>
+                            <a href="#">- Add Category</a>
+                        </li>
 
                     </ul>
                 </li>
@@ -228,6 +231,10 @@
             });
         });
         document.querySelector('.content').addEventListener('click', function () {
+            document.getElementById('sidebar').classList.remove('active');
+
+        })
+        document.querySelector('.navbar-nav').addEventListener('click', function () {
             document.getElementById('sidebar').classList.remove('active');
 
         })
