--- a/user.html
+++ b/user.html
@@ -118,6 +118,7 @@
                         </li>
                     </ul>
                 </li>
+                
                 <li>
                     <a href="#"><i class="fas fa-user-cog"></i> SETTINGS</a>
                 </li>
@@ -175,6 +176,10 @@
             });
         });
         document.querySelector('.content').addEventListener('click', function () {
+            document.getElementById('sidebar').classList.remove('active');
+
+        })
+        document.querySelector('.navbar-nav').addEventListener('click', function () {
             document.getElementById('sidebar').classList.remove('active');
 
         })
