--- a/signup.html
+++ b/signup.html
@@ -23,8 +23,8 @@
 <body>
 
     <div class="container-fluid">
-        <div class="col-md-5 col-sm-6 mx-auto logdiv">
-            <form class="logform p-2 ">
+        <div class="col-md-5 col-sm-6 mx-auto logdiv px-0 mx-0">
+            <form class="logform px-2 ">
 
                 <div class="img-div">
                     <img src="images/logoicon.ico" alt="" class="log-img ">
@@ -36,7 +36,7 @@
                         <div class="form-group ">
                             <label for="exampleInputfirstname">First Name</label>
                             <input type="email" class="form-control form-control-sm" id="examplefirstname"
-                                aria-describedby="emailHelp" placeholder="Enter email" name="firstname">
+                                aria-describedby="emailHelp" placeholder="Enter First Name" name="firstname">
 
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                         <div class="form-group ">
                             <label for="exampleInputlastname">Last Name</label>
                             <input type="email" class="form-control form-control-sm" id="exampleInputlastname"
-                                aria-describedby="emailHelp" placeholder="Enter email" name="lastname">
+                                aria-describedby="emailHelp" placeholder="Enter Last Name" name="lastname">
 
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                 <div class="form-group">
                         <label for="exampleInputEmail">Reg No</label>
                         <input type="email" class="form-control form-control-sm" id="exampleInputEmail"
-                            aria-describedby="emailHelp" placeholder="Enter email" name="email">
+                            aria-describedby="emailHelp" placeholder="Enter Reg-No. If Student" name="email">
     
                     </div>
                 <div class="form-group">
